# p3

./: pyproject.toml
p3/core/: utility.py  variable.py  variable_definitions.py
p3/plotting/: plot_2d.py  plot_flight_dash.py  plot_trajectories.py  utility.py
tests/: test_plot_2d.py  test_plot_flight_dash.py  test_plot_trajectories.py  unit_test.py
tests/inputs/: sample_trajectory.csv
